test/compile_errors/err_labeled_bad_target.w
//! expect-check-fail: label must be followed by a statement

fn main:
    'bad
